Move last-game button below toolbar buttons to avoid overlap

--- a/css/style.css
+++ b/css/style.css
@@ -785,7 +785,7 @@ body {
 /* Game list panel on left side of Card Maker */
 .card-maker-games {
     position: absolute;
-    top: 400px;
+    top: 440px;
     left: 5px;
     width: 92px;
     display: flex;
